! Fix the alignment of IM icons. (ref #889)

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2089,7 +2089,7 @@ div#pollmoderation {
 	color: #c06002;
 }
 
-.poster .profile .profile_icons li {
+.poster .profile .profile_icons li, .poster .im_icons li {
 	display: table-cell;
 	padding-left: 5px;
 }
